--- a/public/css/customer/customer-profile.css
+++ b/public/css/customer/customer-profile.css
@@ -1,111 +1,11 @@
-/*section{
-	width: 100%;
-	height: 100vh;
-	position: relative;
-	overflow-x: hidden;
-	font-size: 1.4rem;
-}
-
-.profile-container .profile-image{
-	width: 80%;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-.profile-container .profile-image img{
-	width: 180px;
-	height: 180px;
-	object-fit: cover;
-	border-radius: 50%;
-	border: 1px solid rgb(255, 137, 0);
-	margin-bottom: 1rem;
-	transition: 0.3s ease-in-out;
-}
-.profile-container .profile-image img:hover{
-	border: 4px solid rgb(255, 137, 0);
-}
-.profile-container .profile-buttons{
-	width: 80%;
-	margin: 2rem auto;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	align-items: center;
-	height: 20rem;
-}
-.profile-container .profile-buttons div{
-	width: 40%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-.profile-container .profile-buttons div button{
-	padding: 1rem;
-	border-radius: 1rem;
-	cursor: pointer;
-	background-color: transparent;
-	font-size: 1.5rem;
-	border: 1px solid rgb(255, 137, 0);
-	transition: 0.3s ease-in-out;
-}
-.profile-container .profile-buttons div a{
-	padding: 1rem;
-	border-radius: 1rem;
-	cursor: pointer;
-	background-color: transparent;
-	font-size: 1.5rem;
-	border: 1px solid rgb(255, 137, 0);
-	color: black;
-	transition: 0.3s ease-in-out;
-	font-weight: bold;
-}
-.profile-container .profile-buttons div a:hover{
-	color: white;
-	background-color: rgb(255, 137, 0);
-}
-
-
-@media(max-width: 1030px){
-	.profile-container .profile-buttons div{
-		width: 60%;
-	}
-}
-@media(max-width: 720px){
-	.profile-container .profile-buttons div{
-		width: 80%;
-	}
-}
-@media(max-width: 530px){
-	.profile-container .profile-buttons div{
-		width: 100%;
-	}
-}
-@media(max-width: 400px){
-	.profile-container .profile-buttons{
-		width: 100%;
-	}
-	.profile-container .profile-image{
-		width: 100%;
-	}
-	.profile-container .profile-buttons div{
-		flex-direction: column;
-		align-items: center;
-	}
-	.profile-container .profile-buttons div button{
-		width: 60%;
-		margin-bottom: 0.8rem;
-	}
-}*/
-
 section{
 	width: 100%;
-	height: 100vh;
+	height: 120vh;
 	position: relative;
 	overflow-x: hidden;
+	overflow-y: visible;
 	font-size: 1.4rem;
+	/*border: 3px solid red;*/
 }
 
 .profile-container{
@@ -113,7 +13,8 @@ section{
 	flex-wrap: wrap;
 	flex-direction: row;
 	width: 80%;
-	margin: 0 auto;
+	margin: 4rem auto;
+	/*border: 3px solid blue;*/
 }
 
 .profile-container .profile-image{
@@ -124,6 +25,7 @@ section{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-bottom: 4rem;
 }
 .profile-container .profile-image img{
 	width: 180px;
@@ -187,6 +89,7 @@ section{
 	flex-direction: column;
 	justify-content: space-between;
 	height: 20vh;
+	margin-bottom: 2rem;
 }
 
 .profile-container .profile-details .address-field{
@@ -195,6 +98,7 @@ section{
 	flex-direction: column;
 	height: 25vh;
 	justify-content: space-between;
+	margin-bottom: 2rem;
 }
 
 .profile-container .profile-details .password-field{
@@ -203,6 +107,11 @@ section{
 	flex-direction: column;
 	height: 25vh;
 	justify-content: space-between;
+	margin-bottom: 2rem;
+}
+
+.profile-container .profile-details .phone-number-field, .profile-container .profile-details .email-field{
+	margin-bottom: 2rem;
 }
 
 .profile-container .profile-details .submit-button{
