--- a/public/css/owner/owner-add-item.css
+++ b/public/css/owner/owner-add-item.css
@@ -42,16 +42,37 @@ body{
     font-weight: bold;
 }
 .image-clz{
+    border: 2px solid rgb(255, 138, 0);
     margin-top: 25%;
+    margin-left: 20px;
     width: 290px;
-    height: 170px;
+    height: 240px;
 }
-.img{
+.image-clz .fa-hotdog{
+    font-size: 200px;
+    margin: auto;
+    padding: 20px;
+    padding-left: 30px;
+}
+/* .img{
 
     width: 290px;
     height: 170px;
     object-fit: cover; 
+} */
+
+.input-fileds select{
+    width: 500px;
+    border: none;
+    border-bottom: 2px solid rgb(255, 138, 0);
+    padding: 10px;
+    color:back;
+    font-weight: bold;
+    margin-top: 10px;
+    /* margin-left: 20px;    */
+    
 }
+
 
  .input-fileds{
     width:190px; 
@@ -79,25 +100,28 @@ body{
      
 }
 .add-btn{
-    margin-top: 30px;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
 }
 .add-btn select{
-    width: 390px;
+    width: 500px;
     border: none;
     border-bottom: 2px solid rgb(255, 138, 0);
     padding: 10px;
     color:back;
     font-weight: bold;
-    margin-top: 10px;
-    margin-left: 20px;   
+    /* margin-top: 10px; */
+    /* margin-left: 20px;    */
     
 }
+
 .add-btn label{
-    font-weight: bold;
-    font-size: 20px;
-    /* margin-left: 20px; */
+    font-size: 18px;
+    font-weight:bold;
 
 }
+
 
 .save{
  margin-left: 56%;
@@ -106,7 +130,7 @@ body{
  button{
     width: 90px;
     height: 30px;
-    font-weight: 3px;
+    font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
     border: 1px solid rgb(257, 138, 0);
