--- a/public/css/owner/owner-menu-items.css
+++ b/public/css/owner/owner-menu-items.css
@@ -54,7 +54,7 @@ body{
     margin-top: 5px;
     border-collapse: collapse;
     min-width: 900px;
-    border-radius:5px 5px 0 0 ;
+    /* border-radius:5px 5px 0 0 ; */
     overflow:hidden ; 
     box-shadow: 0 0 20px rgb(0, 0,0,0.15);
 
@@ -77,18 +77,18 @@ body{
     border-bottom: 1px solid #dddddd;
     /* cursor: pointer; */
 }
-.content-table tbody tr:hover{
+/* .content-table tbody tr:hover{
   background-color: #ffefea;
  height: 47px;
  font-size: 15px;
   
-}
-/* .content-table tbody tr:nth-of-type(even){
-    background-color: #f3f3f3;
 } */
-.content-table tbody tr:last-of-type{
-    border-bottom: 2px solid #e9780e;
+.content-table tbody tr:nth-of-type(even){
+    background-color: #f3f3f3;
 }
+/* .content-table tbody tr:last-of-type{
+    border-bottom: 2px solid #e9780e;
+} */
 #Check-box{
     width: 15px;
     height: 15px;
