--- a/public/css/owner/owner-raw-materials.css
+++ b/public/css/owner/owner-raw-materials.css
@@ -15,7 +15,7 @@ body{
   
 }
 .middle-section{
-    height: 100vh;
+    height: 110vh;
     font-size: 14px;
     margin-left: 100px;
 }
@@ -37,6 +37,7 @@ body{
 }
  .topic{
     margin: 20px;
+    margin-left: 4px;
     margin-top: 10px;
     height: auto;
     /* background-color: blue; */
@@ -138,8 +139,9 @@ body{
 }
 .add
 {
-    width: 90px;
-    height: 25px;
+    /* width: 90px;
+    height: 30px; */
+    padding: 10px;
     font-weight:bold;
     border-radius: 10px;
     color: black;
@@ -156,13 +158,15 @@ body{
      color: white; 
 }
 .del-row{
-    width: 90px;
-    height: 25px;
+    /* width: 90px;
+    height: 30px; */
+    padding: 10px;
     font-weight:bold;
     border-radius: 10px;
     cursor: pointer;
     border: 1px solid rgb(255, 138, 0);
     background-color: white;
+    margin-top: 10px;
 }
 .del-row:hover{
     color: white;
@@ -170,8 +174,12 @@ body{
 }
 .save-btn{
     margin-left: 57%;
-    width: 90px;
-    height: 30px;
+    margin-top: 50px;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    /* width: 90px;
+    height: 30px; */
     font-weight:bold;
     border-radius: 10px;
     cursor: pointer;
@@ -182,4 +190,21 @@ body{
     color: white;
     background-color: rgb(255, 138, 0);
 }
+.get-btn{
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    /* width: 100px;
+    height: 30px; */
+    font-weight:bold;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 1px solid rgb(255, 138, 0);
+    background-color: white;
+}
+.get-btn:hover{
+    color: white;
+    background-color: rgb(255, 138, 0);
+}
+
 
