--- a/public/css/cashier/cashier-header.css
+++ b/public/css/cashier/cashier-header.css
@@ -79,6 +79,10 @@
 .container .navigation ul li a .icon .fa{
     font-size: 24px;
 }
+.container .navigation ul li a .icon .fa-elementor{
+    font-size: 20px;
+    /* font-weight: 10px; */
+}
 #menuBtn{
     font-size: 20px;
     transition: 0.2s ease-in-out;
