--- a/public/css/branchManager/orderDetails.css
+++ b/public/css/branchManager/orderDetails.css
@@ -57,28 +57,58 @@
     margin-top: 30px;
 }
 table{
-    width: 100%;
+    width: 80%;
     border-collapse: collapse;
 }
 
 table td{
     padding: 12px 5px;
     text-align: left;
+    align-items: left;
 }
 
 table th{
     padding: 12px 5px;
     text-align: left;
 }
-
+table th:last-child{
+    text-align: right;
+}
 table thead{
     background-color: rgb(255, 138, 0);
 }
 tr:nth-child(even){
     background-color: #f2f2f2;
 }
+#orderDetails td:nth-child(2){
+    display: flex;
+    /* background-color: yellow; */
+}
+td:last-child{
+    text-align: right;
+}
 tbody tr:hover{
     border-color: #ddd;
+}
+.cell{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid red; */
+    /* width: 40%;
+    margin: 0 auto; */
+    /* background-color: tomato; */
+}
+
+.image{
+    width: 50px;
+    height: 50px;
+    margin-right: 25px;
+}
+
+img{
+    width: 50px;
+    height: 50px;
 }
 
 .total-container{ 
@@ -86,11 +116,11 @@ tbody tr:hover{
     flex-wrap: wrap; 
     align-items: flex-end; 
     flex-direction: column; 
-    width: 100%; 
+    width: 60%; 
     margin: 3rem auto; 
 } 
 .total-container table{ 
-    width: 100%; 
+    width: 80%; 
     max-width: 300px; 
     border-collapse: collapse; 
     border-spacing: 10px; 
@@ -111,8 +141,9 @@ tbody tr:hover{
 
 .btn-container{
     height: 60px;
-    width: 100%;
+    width: 80%;
     margin-top: 40px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
     /* background-color: crimson; */
@@ -141,6 +172,7 @@ button:hover{
 .popup-container{
     visibility: hidden;
     position: absolute;
+    /* transition: 0s; */
 }
 
 .popup-container-active{
@@ -216,7 +248,7 @@ button:hover{
     width: 90%;
     height: fit-content;
     padding: 20px 10px;
-    background-color: rgb(228, 228, 228);
+    background-color: rgb(238, 238, 238);
     border-radius: 10px;
 
     margin-bottom: 30px;
@@ -246,7 +278,7 @@ button{
 	border: 2px solid rgb(255, 137, 0);
 	font-weight: bold;
 	cursor: pointer;
-	transition: 0.3s ease-in-out;
+	/* transition: 0.3s ease-in-out; */
 }
 
 button:hover{
