--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -130,8 +130,14 @@
 .delivery-container .sub-container1 .sub-container2 .answer{
     border-bottom: 1px solid black;
 }
+.total-container{
+    width: 74%;
+}
+.order-details .buttons{
+    width: 74%;
+}
 button{
-	padding: 1rem;
+	padding: 10px;
 	background-color: transparent;
 	transition: 0.3s ease-in-out;
     border-radius:  10px;
