--- a/public/css/owner/owner-report.css
+++ b/public/css/owner/owner-report.css
@@ -37,7 +37,8 @@
   font-weight: 700;
   margin-bottom: 10px;
 }
-.report-selection .condition select {
+/* .report-selection .condition select { */
+  select{
     width: 100%;
     background-color: white;
     border: none;
@@ -54,31 +55,46 @@
 .report-selection .condition .time-selection label{
     font-weight: 500;
     margin-left: 15px;
-    width: 30%;
+    width: 28%;
     display: flex;
-    border: 2px solid red;
 }
-.report-selection .condition .time-selection label span:last-child{
-    margin-left: 70px;
+.report-selection .condition .time-selection label div:first-child{
+  width: 70%;
+  
+}
+
+.report-selection .condition .time-selection label div:last-child{
+    /* margin-left: 70px; */
+    display: flex;
     justify-content: flex-end; 
+    align-items: center;
+    width: 12%;
+
 }
   
 .report-selection .condition .time-selection .sub-time-selection{
      /* display: grid; */
      display: none;
-     grid-template-columns: auto auto auto auto auto auto;
-     grid-gap: 20px;
+     grid-template-columns: 100px 150px 120px auto;  
+     grid-gap: 40px;
      padding: 10px;
      align-items: center;
   
 }
 .report-selection .condition .time-selection .sub-time-selection label{
-    text-align:right;
+   
     font-weight: 400;
 }
   
 .report-selection .condition .time-selection  .sub-time-selection .time-dropdown{
-   border-bottom: 1px solid rgb(255,138,0);
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  border-bottom: 1px solid rgb(255,138,0);
+  margin: 10px 0px;
+}
+.report-selection .condition .time-selection  .sub-time-selection .time-dropdown select{
+
 }
 
 .report-selection .generate-btn{
