--- a/public/css/branchManager/totalSalesReports.css
+++ b/public/css/branchManager/totalSalesReports.css
@@ -1,230 +1,124 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap');
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-body{
-    padding: 0;
-    margin: 0%;
-    width: 100%;
-    height: 110%;
     font-family: 'Montserrat', sans-serif;
-    /* background-color: #bdba04; */
-    
 }
-#body{
-    width: 78%;
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    font-size: 14px;
-    margin-left: 100px;
-
+.sales-report{
+    min-height: 80vh;
 }
-
-button{
-    /* border: 2px solid rgb(255, 138, 0);
-    border-radius: 10px;
-    font-size: 16px;
-    font-weight: bold; */
-    padding:10px;
-    /* background-color: white; */
-    /* padding: 0.8rem; */
-	background-color: transparent;
-	border-radius: 1rem;
-	border: 2px solid rgb(255, 137, 0);
-	font-weight: bold;
-	cursor: pointer;
-	transition: 0.3s ease-in-out;
+.topic-sales{
+    font-size: 25px;
+    font-weight: 800;
+    padding: 5px;
+    margin: 20px 0  30px 100px;
 }
-
-button:hover{
-    background-color: rgb(255, 138, 0);
-    color: white;
+.report-selection{
+  margin-left: 100px;
+  margin-bottom: 20px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
-
-.sales-topic{
-    /* position: absolute; */
-    margin-top: 50px;
-    margin-left: 100px;
-    left: 43%;
-    font-size: 23px;
-    font-weight: bold;
+.report-selection .condition{
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  border-bottom: 1px solid rgb(255,138,0);
+  margin: 10px 0px;
 }
-
-.select-raw{
-    display: flex;
-    flex-direction: column;
-    /* background-color: rgba(247, 243, 238, 0.781); */
-    border: 1px solid rgb(255, 138, 0);
-    border-radius: 20px;
-    margin-top: 110px;
-    height: 330px;
-    position:absolute;
-    /* left: 370px; */
-    margin-left: 100px;
-
+.report-selection .time{
+  border-bottom: none;
 }
-.select-raw-btn2{
-    display: flex;
-    margin-top: 15px;
-
+.report-selection .condition .topic{
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 10px;
 }
-.select-raw-btn2 {
-    align-items: center;
-}
-.select-raw-btn2  button{
-    /* padding: 100px 70px; */
-    width: 100px;
-    height: 30px;
-    margin-left: 50px;
-    margin-right: 50px;
-    padding: 0px 15px;
-    font-size: 16px;
-    font-weight: bold;
-    border-radius: 10px;
-    cursor: pointer;
-    border: 2px solid rgb(255, 138, 0);
-    /* background-color: white; */
-    
-}
-
-
-.select-raw-btn2  button:hover{
-    background-color: rgb(255, 138, 0);
-    color: white;
-    border-color: rgb(255, 51, 0);
-}
-
-
-.drop-down-list-daily{
-    position: absolute;
-    top: 13vh;
-    /* left: 30px; */
-    width:60%; 
-    height: 140px;
-    display: flex;
-    flex-direction: row;
-    display: none;
-    
-}
-.year{
-    width:40px; 
-    height: 32px;
-    margin-left:95px;
-    
-
-}
-.month{
-    width:40px; 
-    height: 32px;
-    margin-left:95px;
-    
-
-}
-.week{
-    width:40px; 
-    height: 32px;
-    margin-left:95px;  
-}
-.date{
-    width:40px; 
-    height: 32px;
-    margin-left:95px;
-    
-
-}
-.outlet{
-    width:40px; 
-    height: 32px;
-    margin-left:95px;
-    
-}
-.item{
-    width:40px; 
-    height: 32px;
-    margin-left:95px; 
-}
-select{
-   /* width: 170px;
+/* .report-selection .condition select { */
+  select{
+    width: 100%;
+    background-color: white;
     border: none;
-    border-bottom: 2px solid rgb(255, 138, 0);
-    box-shadow: 1px 1px #ff5a5a;
-    padding: 10px;
-    color: back;
-    font-weight: bold;
-    margin-top: 10px;
-    border-radius: 8px; */
-    width: 100px;
-    border: none;
-    border:nth-child 1px solid rgb(255, 138, 0);
-    box-shadow: 0px 1px rgb(255, 138, 0);
-    padding: 10px;
-    color:back;
-    font-weight: bold;
-    margin-top: 10px;
+    padding: 10px 0;
     outline: none;
-    /* border-radius: 5px; */
-    background-color:white;
-    
-    
 }
-label{
-    font-size: 15px;
-    font-weight: bold;
+
+.report-selection .condition .time-selection{
+  display: flex;
+  flex-direction: column; 
+  gap: 10px;
+  align-items: flex-start;
+}
+.report-selection .condition .time-selection label{
+    font-weight: 500;
     margin-left: 15px;
+    width: 28%;
+    display: flex;
+}
+.report-selection .condition .time-selection label div:first-child{
+  width: 70%;
+  
+}
+
+.report-selection .condition .time-selection label div:last-child{
+    /* margin-left: 70px; */
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center;
+    width: 12%;
 
 }
-.generate-btn button{
-    position:absolute;
-    top: 15vh;
+  
+.report-selection .condition .time-selection .sub-time-selection{
+     /* display: grid; */
+     display: none;
+     grid-template-columns: 100px 150px 120px auto;  
+     grid-gap: 40px;
+     padding: 10px;
+     align-items: center;
+  
+}
+.report-selection .condition .time-selection .sub-time-selection label{
+   
+    font-weight: 400;
+}
+  
+.report-selection .condition .time-selection  .sub-time-selection .time-dropdown{
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  border-bottom: 1px solid rgb(255,138,0);
+  margin: 10px 0px;
+}
+.report-selection .condition .time-selection  .sub-time-selection .time-dropdown select{
 
-    /* width: 100px;
-    height: 30px; */
-    font-weight: bold;
-    /* padding: 0px 15px; */
-    font-size: 16px;
+}
+
+.report-selection .generate-btn{
+  display: flex;
+  justify-content: center;
+}
+.report-selection .generate-btn button{
     border-radius: 10px;
+    background-color: white;
+    padding: 10px 15px;
+    border: 2px solid rgb(255,138,0);
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    transition-duration: 0.4s;
     cursor: pointer;
-    border: 2px solid rgb(255, 138, 0);
-    /* background-color: white; */
-    
+    font-weight: bold;
 }
-.generate-btn button:hover{
-    background-color: rgb(255, 138, 0);
-    color: white;
-    border-color: rgb(255, 51, 0);
+.report-selection .generate-btn button:hover{
+  color: white;
+  background-color:rgb(255,138,0);
 }
-.drop-down-list-weekly{
-    position: absolute;
-    top: 13vh;
-    /* left: 30px; */
-    width:60%; 
-    height: 140px;
-    display: flex;
-    flex-direction: row;
-    display: none;
-}
-.drop-down-list-monthly{
-    position: absolute;
-    top: 13vh;
-    /* left: 30px; */
-    width:60%; 
-    height: 140px;
-    display: flex;
-    flex-direction: row;
-    display: none;
-}
-.drop-down-list-outlet{
-    position: absolute;
-    top: 13vh;
-    left: 30px;
-    width:60%; 
-    height: 140px;
-    display: flex;
-    flex-direction: row;
-    display: none;
+
+/*this is done to expand the height view*/
+.category-report{
+    margin-bottom: 20px;
 }
