--- a/public/css/bakery_manager/bakery-manager-more-details-pending-order.css
+++ b/public/css/bakery_manager/bakery-manager-more-details-pending-order.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap');
+
 *{
   margin: 0%;
   padding: 0%;
@@ -145,7 +147,8 @@ img{
   margin-top: 40px;
   margin-bottom: 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  /* justify-content: space-between; */
   /* background-color: crimson; */
 }
 
