--- a/public/css/customer/customer-navbar.css
+++ b/public/css/customer/customer-navbar.css
@@ -186,29 +186,26 @@ nav{
     font-size: 2rem;
     color: #eee;
     transition: 0.3s ease;
+    cursor: pointer;
 }
 .user-icons a .far:hover,.user-icons a .fas:hover{
     color: rgb(255, 137, 0);
 }
 
 .user-icons a span {
-    font-size: 12px;
-    line-height: 14px;
-    /*background: #F68B1E;*/
-    background: transparent;
-    padding: 2px;
-    /*border: 1px solid #fff;*/
-    border: 2px solid rgb(256, 138, 0);
-    border-radius: 50%;
-    /*position: absolute;*/
-    /*top: -1px;*/
-    /*left: 13px;*/
-    color: #fff;
-    right: 20px;
-    /*width: 20px;
-    height: 20px;*/
     text-align: center;
-    }
+    font-size: 1.2rem;
+  color: white;
+  font-weight: bold;
+  border: 0.2rem solid white;
+  border-radius: 50%;
+  padding: 0.2rem;
+  position: relative;
+  left: -0.4rem;
+  top: -1rem;
+  margin: 0;
+  background-color: red;
+}
 
 .pagename{
     width: 80%;
@@ -336,3 +333,31 @@ nav{
 }
 
 /*Shape Ends*/
+
+
+/*Following model and model active for the notification panel*/
+
+.modal {
+  /*position: fixed;*/
+  position: fixed;
+  top: 11%;
+  left: 56%;
+  /*transform: translate(-50%, -50%) scale(0);*/
+  transform:  scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid rgba(255, 138, 0,0.5);
+  border-radius: 10px;
+  z-index: 10;
+  background-color: rgba(255, 255, 255, 0.9);
+  width: 500px;
+  max-width: 80%;
+}
+
+.modal.active {
+  /*transform: translate(-50%, -50%) scale(1);*/
+  transform: scale(1);
+}
+
+
+/*Notification panel ends*/
+
