--- a/public/css/owner/owner-account.css
+++ b/public/css/owner/owner-account.css
@@ -9,7 +9,7 @@
     margin-bottom: 50px;
 }
 .view{
-    height: 90vh;
+    min-height: 90vh;
 }
 
 .content .account-container{
@@ -85,9 +85,11 @@ button:hover{
 }
 .content .profile-collection{
     margin: 30px 0;
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-evenly; */
+    display: grid;
+    grid-template-columns: auto auto auto auto;
 }
 .content .profile-collection .profile-employee{
     display: flex;
