--- a/public/css/branchManager/orderDetails.css
+++ b/public/css/branchManager/orderDetails.css
@@ -172,7 +172,8 @@ button:hover{
 .popup-container{
     visibility: hidden;
     position: absolute;
-    /* transition: 0s; */
+    
+  /* transition: 0s; */
 }
 
 .popup-container-active{
@@ -190,9 +191,11 @@ button:hover{
     height: fit-content;
     padding-top: 30px;
     padding-bottom: 30px;
+    /* padding-left: 40px; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     background-color: white;
     border-radius: 15px;
     border: 2px solid rgb(255, 138, 0);
@@ -201,6 +204,7 @@ button:hover{
 
 .mid-box h1{
     margin-bottom: 20px;
+
 }
 
 .mid-box-2{
@@ -284,4 +288,12 @@ button{
 button:hover{
     background-color: rgb(255, 138, 0);
     color: white;
+}
+.fa-times{
+    margin-left: 90%;
+    margin-top: -5px;
+}
+.fa-times:hover{
+    color: rgb(255, 138, 0);
+
 }
